force-app/main/default/objects/Contact/fields/Copado_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Copado_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Copado External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>