force-app/main/default/objects/Contact/fields/Efficient__c.field-meta.xml
<CustomField>
    <fullName>Efficient__c</fullName>
    <label>Efficient</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>